fix(style): Ensure scrollbar is consistent

--- a/src/components/sidebar/style.module.scss
+++ b/src/components/sidebar/style.module.scss
@@ -13,7 +13,6 @@
   flex-direction: column;
   width: 100%;
   z-index: 10;
-  padding: 1.5rem 1rem;
   border-right: 1px solid var(--border-color);
   position: fixed;
   display: none;
@@ -70,16 +69,9 @@
   }
 
   .toc {
-    overflow: auto;
     font-size: 0.875rem;
     flex: 1;
-    overflow-y: hidden;
-    overflow-x: hidden;
-
-    // https://stackoverflow.com/questions/35484742/hide-useless-scrollbars-that-show-up-on-windows-only
-    &:hover {
-      overflow-y: auto;
-    }
+    overflow: auto;
 
     @media only screen and (min-width: 768px) {
       display: block;
